--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "main": "index.js",
   "dependencies": {
     "angular": "^1.5.0",
+    "angular-animate": "^1.5.6",
+    "angular-aria": "^1.5.6",
+    "angular-material": "^1.1.0-rc.5",
     "angular-ui-router": "^0.2.15",
-    "normalize.css": "^3.0.3"
+    "babel-core": "^6.9.1",
+    "html-webpack-plugin": "^1.7.0",
+    "mobx": "^2.2.2",
+    "ng-annotate": "^1.2.1",
+    "normalize.css": "^3.0.3",
+    "text": "^0.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.7.4",
     "babel-plugin-transform-runtime": "^6.7.5",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
@@ -28,6 +36,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-template": "^3.0.0",
     "gulp-util": "^3.0.7",
+    "html-loader": "^0.4.3",
     "html-webpack-plugin": "^1.7.0",
     "karma": "^0.13.9",
     "karma-chai": "^0.1.0",
@@ -42,7 +51,7 @@
     "node-libs-browser": "^0.5.0",
     "raw-loader": "^0.5.1",
     "run-sequence": "^1.1.0",
-    "style-loader": "^0.12.2",
+    "style-loader": "^0.12.4",
     "stylus-loader": "^1.1.1",
     "supports-color": "^3.1.2",
     "webpack": "^1.9.5",
